# SDL_OpenGL-

draw_shape/: CMakeLists.txt  main.cpp
draw_shape_with_shader/: CMakeLists.txt  XOpenGLUtils.cpp  XOpenGLUtils.h  main.cpp
show_window/: CMakeLists.txt  main.cpp
